faet: add level 2

--- a/android/online/0/config.json
+++ b/android/online/0/config.json
@@ -1,1 +1,1 @@
-{"version":"","encrypt":false,"assetGroups":[{"name":"level/level_1","totalSize":46880,"assets":["level/level_1_cce261a5748a690f04073e832ab8c62c"]}]}
+{"version":"","encrypt":false,"assetGroups":[{"name":"level/level_1","totalSize":46813,"assets":["level/level_1_cce261a5748a690f04073e832ab8c62c"]},{"name":"level/level_2","totalSize":46455,"assets":["level/level_2_99079ae881be6210312fe0101d5f8848","level/level_1_cce261a5748a690f04073e832ab8c62c"]}]}
